# RustSecurityHook

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
benches/: hook.rs
docs/: index.md  rules.md
docs/adr/: 001-bingroup-fast-path.md  001-clap-migration.md  001-sql-blocking.md  002-docker-blacklist-rules.md  003-write-edit-and-script-scanning.md  004-fail-open-exit-code-contract.md  005-subprocess-list-bypass.md  006-kubernetes-helm-initial-blacklist.md  007-alias-system-design.md  008-rule-disable-enable.md  009-rsh-self-protection.md  010-criterion-benchmarks.md  011-tool-checker-parallel-pipeline.md  012-per-checker-documentation-structure.md  013-secret-file-protection.md  014-shell-tokenization-and-scoped-target-extraction.md  015-sequential-checker-execution.md  016-glab-rules-and-subprocess-bypass-expansion.md  017-nopush.md  018-settings-hook-guard.md  019-tool-disable-enable.md  020-sql-blocking.md  021-bingroup-fast-path.md  022-clap-migration.md
docs/behavior/: alias-system.md  bash-tool.md  checker-docker.md  checker-fallback.md  checker-glab.md  checker-helm.md  checker-kubectl.md  checker-rsh.md  content-scanning.md  docker-rules.md  fast-path-optimization.md  forbid-system.md  kubernetes-rules.md  nopush.md  rsh-self-protection.md  secret-file-protection.md  sql-rules.md  write-edit-tool.md
src/: aliases.rs  blacklist.rs  checker.rs  disabled.rs  forbid.rs  lib.rs  main.rs  nopush.rs  secrets.rs  settings_guard.rs  shell.rs
tests/: docs.rs
(+27 files in other folders)
