[package]
name = "rsh"
version = "0.11.0"
edition = "2024"
description = "Claude Code PreToolUse hook that blocks Bash commands matching a configurable blacklist."
license = "Apache-2.0"
repository = "https://github.com/thePermission/RustSecurityHook"
readme = "README.md"

[[bin]]
name = "rsh"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
shell-words = "1.1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hook"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
